modules/gdscript/tests/scripts/analyzer/errors/if_var_use_outside.gd
func test():
    if var x = 100:
        print("t")

    print(x)
